# Crab-Force

./: .gitignore  Cargo.toml  README.md
src/: arc_cdclient.rs  bot_config.rs  cdclient.rs  custom.rs  ids.rs  interaction_command.rs  locale.rs  main.rs  pager.rs  queries.rs
src/commands/: achievement.rs  activity.rs  brick.rs  buy.rs  cooldowngroup.rs  drop.rs  earn.rs  enemy.rs  get.rs  item.rs  level.rs  loottable.rs  mission.rs  mod.rs  npc.rs  package.rs  preconditions.rs  reward.rs  skill.rs  skillitems.rs  skills.rs  smash.rs  unpack.rs  vendor.rs  wonderful_command.rs
