[package]
name = "lu_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
heck = "0.5.0"
once_cell = "1.20.3"
regex = "1.11.1"
rusqlite = "0.33.0"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
